--- a/exemplosjs/ordenando.html
+++ b/exemplosjs/ordenando.html
@@ -3,23 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ordenando</title>
+  <title>Ordenando Valores</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <script src="./ordenando.js"></script>
 </head>
 <body>
-  <form onsubmit="event.preventDefault(); add()">
-    <input type="number" name="Number" id="valor">
-    <input type="submit" value="Adicionar">
-  </form>
-
-  <select name="SortType" id="SortTypeSelection">
-    <option value="0" selected>Bubble Sort</option>
-    <option value="1">Selection Sort</option>
-    <option value="2">Quick Sort</option>
-  </select>
-  <button type="button" onclick="order()">Ordenar</button>
-
-  <button type="button" onclick="mix()">Misturar</button>
+  <div style="margin-inline: 1%;">
+    <h1>Ordenando Valores</h1>
+    <form onsubmit="event.preventDefault(); add()">
+      <div class="mb-3">
+        <label for="valor" class="form-label">Valor</label>
+        <input type="number" class="form-control" name="Number" id="valor">
+      </div>
+      <input type="submit" value="Adicionar" class="btn btn-primary">
+    </form>
+    <hr>
+    <form>
+      <div class="mt-3 mb-3">
+        <select name="SortType" id="SortTypeSelection" class="form-select">
+          <option value="0" selected>Bubble Sort</option>
+          <option value="1">Selection Sort</option>
+          <option value="2">Quick Sort</option>
+        </select>
+      </div>
+        <button type="button" onclick="order()" class="btn btn-primary">Ordenar</button>
+        <button type="button" onclick="mix()" class="btn btn-primary">Misturar</button>
+    </form>
+    <hr>
+  </div>
 
   <ul id="valores"></ul>
 
